objects/Workday__c.object
<CustomObject>
    <fields>
        <fullName>AwesomeSauce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this field if you are awesome</description>
        <inlineHelpText>Select this field if you are awesome</inlineHelpText>
        <label>AwesomeSauce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkdayAutoNumberField__c</fullName>
        <description>AutoNumber Demo</description>
        <displayFormat>WorkDay-{0000}</displayFormat>
        <inlineHelpText>AutoNumberDemo</inlineHelpText>
        <label>WorkdayAutoNumberField</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Workday__c</fullName>
        <description>Select a day you prefer</description>
        <inlineHelpText>This will help you see how AutoRABIT commits and deploys picklists and their values.</inlineHelpText>
        <label>Workday</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WorkdayMon</fullName>
                    <isActive>false</isActive>
                    <label>WorkdayMon</label>
                </value>
                <value>
                    <fullName>WorkdayTue</fullName>
                    <isActive>false</isActive>
                    <label>WorkdayTue</label>
                </value>
                <value>
                    <fullName>WorkdayWed</fullName>
                    <isActive>false</isActive>
                    <label>WorkdayWed</label>
                </value>
                <value>
                    <fullName>WorkdayThu</fullName>
                    <isActive>false</isActive>
                    <label>WorkdayThu</label>
                </value>
                <value>
                    <fullName>WorkdayFri</fullName>
                    <isActive>false</isActive>
                    <label>WorkdayFri</label>
                </value>
                <value>
                    <fullName>OffSat</fullName>
                    <isActive>false</isActive>
                    <label>OffSat</label>
                </value>
                <value>
                    <fullName>OffSun</fullName>
                    <isActive>false</isActive>
                    <label>OffSun</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Workday</label>
    <nameField>
        <label>Workday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workdays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>